--- a/WatchShop/WatchShop.XF/WatchShop.XF/WatchShop.XF.csproj
+++ b/WatchShop/WatchShop.XF/WatchShop.XF/WatchShop.XF.csproj
@@ -7,10 +7,18 @@
 
   <ItemGroup>
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
+    <PackageReference Include="Syncfusion.Xamarin.Buttons" Version="17.3.0.19" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="17.3.0.19" />
     <PackageReference Include="Syncfusion.Xamarin.SfListView" Version="17.3.0.17" />
+    <PackageReference Include="Syncfusion.Xamarin.SfRotator" Version="17.3.0.17" />
     <PackageReference Include="Xamarin.Forms" Version="4.2.0.709249" />
     <PackageReference Include="Xamarin.Essentials" Version="1.2.0" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="1.3.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\WatchDetailsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
